[gd_scene load_steps=11 format=3 uid="uid://d1t0irvo1tq7i"]

[ext_resource type="PhysicsMaterial" uid="uid://lstnlgl40uhj" path="res://Scenes/flight_mode/deer_body_physmat.tres" id="1_k7jrr"]
[ext_resource type="Script" uid="uid://c6lr6h2gib2gb" path="res://Scenes/flight_mode/deer_missile.gd" id="2_vmpjy"]
[ext_resource type="PackedScene" uid="uid://i8r2m0h57x57" path="res://Assets/reindeer_with_upgrades.tscn" id="3_wfu7b"]
[ext_resource type="Script" uid="uid://c88aij3a2s167" path="res://Scenes/follow_cam.gd" id="7_62wey"]

[sub_resource type="Curve" id="Curve_wqsbj"]
_limits = [0.0, 1.0, 0.0, 1000.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(10.685663, 1), 0.0, 0.0, 0, 0, Vector2(740.8377, 1), 0.0, 0.0, 0, 0, Vector2(1000, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e1i74"]
radius = 0.27490234
height = 1.2705078

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_g2hql"]
radius = 0.25976563
height = 0.829834

[sub_resource type="Animation" id="Animation_wfu7b"]
resource_name = "camera_intro"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:slerp_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 9.966666),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.01, 0.1]
}

[sub_resource type="Animation" id="Animation_j778o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:slerp_amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2hql"]
_data = {
&"RESET": SubResource("Animation_j778o"),
&"camera_intro": SubResource("Animation_wfu7b")
}

[node name="DeerMissile" type="RigidBody3D"]
collision_layer = 3
collision_mask = 3
mass = 50.0
physics_material_override = ExtResource("1_k7jrr")
contact_monitor = true
max_contacts_reported = 10
angular_damp = 0.1
script = ExtResource("2_vmpjy")
control_envelope = SubResource("Curve_wqsbj")

[node name="Reindeer" parent="." instance=ExtResource("3_wfu7b")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 0, -0.32696578, 0.08027392)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.080442436, -0.99675924, 0, 0.99675924, 0.080442436, 0, 0.47332117, 0.0827937)
shape = SubResource("CapsuleShape3D_e1i74")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.44430682, -0.89587474, 0, 0.89587474, 0.44430682, 0, 0.83254254, 0.6660558)
shape = SubResource("CapsuleShape3D_g2hql")

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="."]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, 0)
depth = 0.75
polygon = PackedVector2Array(0.8477053, -0.00057055056, 0.9509317, -0.113535166, 0.8671822, -0.1778082, 0.7912232, -0.2264998, 0.6957876, -0.2615578, 0.59840435, -0.28298217, 0.22055706, -0.29856348, -0.7747007, -0.30051112, -0.68705577, -0.16806984)

[node name="DebugUi" type="BoxContainer" parent="."]
unique_name_in_owner = true
offset_top = 90.0
offset_right = 127.0
offset_bottom = 141.0

[node name="PhysicsStats" type="Label" parent="DebugUi"]
unique_name_in_owner = true
layout_mode = 2

[node name="FollowCamera" type="Camera3D" parent="."]
transform = Transform3D(-1, 2.0590445e-08, -1.4091755e-07, 1.0519516e-08, 0.9974694, 0.07109706, 1.4202485e-07, 0.07109706, -0.9974694, 1.4305115e-06, 1.4324219, -2.9223132)
current = true
script = ExtResource("7_62wey")
slerp_amount = 0.01
attach_point = NodePath("../CameraFollowMark")

[node name="AnimationPlayer" type="AnimationPlayer" parent="FollowCamera"]
libraries = {
&"": SubResource("AnimationLibrary_g2hql")
}
autoplay = "camera_intro"

[node name="CameraStartMark" type="Marker3D" parent="."]
transform = Transform3D(0.25881907, -0.06906122, 0.96345377, 0, 0.9974409, 0.07149745, -0.96592593, -0.018504903, 0.25815672, 10.834395, 7.0846376, 5.09433)

[node name="CameraFollowMark" type="Marker3D" parent="."]
transform = Transform3D(-1, 2.1281561e-08, -1.506137e-07, 1.0519516e-08, 0.9974694, 0.07109706, 1.5174561e-07, 0.07109706, -0.9974694, 1.4305115e-06, 1.4324219, -2.954967)

[node name="FlightStateTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="FlightStateTimer" to="." method="_on_flight_state_timer_timeout"]
